--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <hr/>
 
-    <h3><a href="./public/movie_index.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie_ranking.html">Movie Ranking Project</a></h3>
     
     <br/>
 
@@ -21,7 +21,7 @@
 
     <br/>
 
-    <h3><a href="./public/bday_index.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
 
     <br/>
 
