--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <hr/>
 
-    <h3><a href="./public/movie_ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     
     <br/>
 
